--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@
   background-repeat: no-repeat;
   letter-spacing: 0.1rem;
   transition: all 0.1s linear;
-  padding: 0 10px;
+  padding: 0 5px;
   border-radius: 2px;
 }
 
@@ -264,7 +264,7 @@ nav {
 .meeting__button {
   background-color: rgba(229, 182, 53, 0.5137254902);
   cursor: pointer;
-  padding: 3px;
+  padding: 1px;
   font-weight: bold;
   border: none;
   text-transform: uppercase;
@@ -273,7 +273,7 @@ nav {
 .meeting__but-link {
   color: #000000;
   text-decoration: none;
-  margin: 5px;
+  margin: 0 5px;
   letter-spacing: 0.3vw;
   text-align: center;
   text-transform: uppercase;
@@ -1017,7 +1017,7 @@ nav {
   width: 100%;
 }
 .map__size {
-  width: 80%;
+  width: 100%;
   height: 50vh;
 }
 
@@ -1406,10 +1406,18 @@ nav {
 
 .body_rituals__menu-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
   flex-direction: column;
   align-items: start;
   list-style-type: square;
+}
+
+.body_rituals__list-item {
+  text-align: left;
+}
+
+.card-img-top {
+  border-radius: 0;
 }
 
 @media screen and (min-width: 290px) and (max-width: 550px) {
@@ -1433,8 +1441,8 @@ nav {
   }
   .card-img-top {
     object-fit: cover;
-    height: 100%;
-    width: 100%;
+    height: 60%;
+    width: 80%;
   }
   .card-body {
     display: flex;
@@ -1488,23 +1496,23 @@ nav {
     background-color: #e8e1d1;
     border-radius: 0;
     margin: 5px;
+    width: 30%;
   }
   .card__massage-card {
-    width: 30vw;
-    height: 60vh;
+    width: 30%;
+    height: 80vh;
   }
   .card__body-cards {
-    width: 30vw;
-    height: 90vh;
-    display: flex;
+    width: 33%;
+    height: 100vh;
   }
   .card__face-card {
     width: 30vw;
-    height: 70vh;
+    height: 85vh;
   }
   .card-img-top {
     object-fit: cover;
-    height: 50%;
+    height: 40%;
     width: 90%;
   }
   .card-body {
@@ -1528,7 +1536,7 @@ nav {
     align-items: center;
   }
   .card__massage-card {
-    height: 50vh;
+    height: 60vh;
   }
   .card__body-cards {
     height: 80vh;
@@ -1538,7 +1546,7 @@ nav {
     height: 70vh;
   }
   .card-img-top {
-    height: 50%;
+    height: 30%;
     width: 80%;
     object-fit: cover;
   }
@@ -1550,36 +1558,37 @@ nav {
   }
 }
 @media screen and (min-width: 1440px) {
-  .massage__title,
+  /* .massage__title,
   .body_rituals__title,
   .face_rituals__title {
-    height: 100px;
-  }
+      height: 100px;
+  } */
   .card {
     height: 100vh;
-    width: 20%;
+    width: 30%;
     background-color: #e8e1d1;
     border-radius: 0;
     margin: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
   }
   .card__massage-card {
-    height: 50vh;
+    height: 70vh;
   }
   .card__body-cards {
-    height: 80vh;
-    width: 20%;
+    height: 90vh;
+    width: 33%;
   }
   .card__face-card {
-    height: 70vh;
+    height: 85vh;
     width: 30%;
   }
   .card-img-top {
     height: 50%;
     width: 80%;
     object-fit: cover;
+    border-radius: none;
   }
   p {
     padding: 0;
@@ -1589,7 +1598,7 @@ nav {
   }
 }
 .massage {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -1686,6 +1695,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 100vh;
+  margin-top: 50px;
 }
 .school__header {
   margin: 10px;
@@ -1724,13 +1734,20 @@ a {
 }
 
 hr {
-  width: 50%;
+  width: 80%;
   margin: 5px auto;
   border-top: 3px solid black;
 }
 
-.massage__title, .body_rituals__title, .face_rituals__title {
+.massage__title,
+.body_rituals__title,
+.face_rituals__title {
   text-transform: uppercase;
   font-weight: 600;
   padding: 2px;
+}
+
+h3 {
+  font-size: inherit;
+  font-weight: inherit;
 }
