--- a/src/import/_button.scss
+++ b/src/import/_button.scss
@@ -33,16 +33,15 @@
   border: none;
   width: 90vw;
   background-color: #e8e1d1;
-  
 }
 .footer_btn {
   border-radius: 5px;
-  box-shadow: 1px -1px 7px 1px rgba(0, 0, 0, 0.3)
+  box-shadow: 1px -1px 7px 1px rgba(0, 0, 0, 0.3);
 }
 .meeting__button {
   background-color: #e5b63583;
   cursor: pointer;
-  padding: 3px;
+  padding: 1px;
   font-weight: bold;
   border: none;
   text-transform: uppercase;
@@ -50,7 +49,7 @@
 .meeting__but-link {
   color: #000000;
   text-decoration: none;
-  margin: 5px;
+  margin: 0 5px;
   letter-spacing: 0.3vw;
   text-align: center;
   text-transform: uppercase;
@@ -58,4 +57,5 @@
 .send {
   margin-top: 10px;
   letter-spacing: 1px;
+  
 }
