--- a/src/import/_school.scss
+++ b/src/import/_school.scss
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    
+    margin-top: 50px;
     &__header {
         margin: 10px;
     }
